# xchannel

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
xchannel/: Cargo.toml
xchannel/sql/: init.sql  init.surql
xchannel/src/: main.rs
xchannel/src/db/: device.rs  mod.rs  table.rs
xchannel/src/device/: mod.rs  tag.rs
xchannel/src/driver/: device.rs  drivers.rs  dto.rs  mgr.rs  mod.rs  tag.rs
xchannel/src/driver/modbus/: mod.rs  modbus_tcp.rs
xchannel/src/driver/modbus/client/: tcp.rs
xchannel/src/driver/modbus/protocol/: frame.rs  mod.rs  tcp.rs
xchannel/src/drivers/modbus/: mod.rs  modbus_tcp.rs
xchannel/src/drivers/modbus/client/: mod.rs  tcp.rs
xchannel/src/drivers/modbus/protocol/: frame.rs  mod.rs  tcp.rs
xchannel/src/dto/: device.rs  mod.rs  tag.rs
xchannel/src/error/: mod.rs
xchannel/src/manager/: device.rs  driver.rs  mod.rs  tag.rs
xchannel/src/module/: device.rs  device_manager.rs  driver.rs  mod.rs  table.rs  tag.rs  value.rs
xchannel/src/module/db/: device.rs  mod.rs  table.rs  tag.rs
xchannel/src/module/driver/: mod.rs  tag.rs
xchannel/src/restful/: handler.rs  mod.rs  rejection.rs  request.rs  response.rs
xchannel/src/tag/: dto.rs  mod.rs  table.rs  type.rs  vtype.rs
