[package]
name = "xchannel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
warp = "0.3"
log = "0.4"
byteorder = "1.5"
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
tokio-util = "0.7"
thiserror = "1.0"
surrealdb = { version = "1.1.0", features = ["kv-rocksdb", "kv-mem"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
